dbus service: use --gapplication-service

We have to parse this argument for ourselves because we do our own
commandline argument handling.

https://bugzilla.gnome.org/show_bug.cgi?id=721892